<resources>
    <string name="app_name">AppProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used in habit edition activity -->
    <string name="habit_creation_header_text">Создание привычки</string>
    <string name="habit_edit_header_text">Изменение привычки</string>
    <string name="habit_name_edit_text">Название привычки</string>
    <string name="habit_name_default_value">название</string>
    <string name="habit_descr_edit_text">Описание привычки</string>
    <string name="habit_descr_default_value">описание</string>
    <string name="habit_priority_edit_text">Приоритет привычки</string>
    <string name="habit_type_button_text">Тип привычки</string>
    <string name="habit_good_button_text">Полезная привычка</string>
    <string name="habit_bad_button_text">Вредная привычка</string>
    <string name="habit_period_edit_text">Периодичность</string>
    <string name="habit_period_default_value">7</string>
    <string name="habit_counter_edit_text">Количество выполнений\n за период</string>
    <string name="habit_counter_default_value">3</string>
    <string name="habit_create_button_text">Создать привычку</string>
    <string name="habit_edit_button_text">Изменить привычку</string>
    <string name="habit_color_picker_edit_text">Цвет:</string>
    <string name="default_habit_color_rgb_text">(R:254, G:65, B:0)</string>

    <!-- Strings used in habit list item -->
    <string name="default_habit_name">Привычка</string>
    <string name="default_habit_description">Описание</string>
    <string name="habit_priority">Приоритет:</string>
    <string name="habit_type">Тип:</string>
    <string name="habit_period">Периодичность:</string>
    <string name="habit_counter">Выполнения:</string>

    <string name="good_habit_repr">хорошая</string>
    <string name="bad_habit_repr">вредная</string>

    <!-- Strings in menu -->
    <string name="nav_header_text">Менеджер \nпривычек</string>
    <string name="menu_open">Открыть</string>
    <string name="menu_close">Закрыть</string>
    <string name="menu_item_text_habits">Привычки</string>
    <string name="menu_item_text_info">Информация о приложении</string>
    <string name="menu_item_clear_habits_local">Отчистить локальные привычки</string>
    <string name="menu_item_clear_habits_remote">Отчистить привычки на сервере</string>
    <string name="menu_item_sync_habits">Синхронизировать привычки</string>

    <!-- Strings in App info -->
    <string name="app_info_header">Информация о приложении</string>
    <string name="app_info_version">Версия: 5</string>
    <string name="app_info_author">Автор: Рыженков Илья</string>

    <!-- Strings in bottom sheet -->
    <string name="bottom_sheet_header">Фильтры</string>
    <string name="bottom_sheet_name_filter">Фильтровать по имени:</string>

</resources>
