<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="202dp"
            android:id="@+id/guidelineEdit"/>
    <TextView
            android:text="@string/habit_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/HabitNameEditorText" android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/habitEditHeader"
            android:layout_marginTop="24dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextHabitName"
            android:inputType="text"
            android:text="@string/habit_name_default_value"
            app:layout_constraintStart_toStartOf="@+id/guidelineEdit"
            app:layout_constraintTop_toBottomOf="@+id/habitEditHeader" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/habit_descr_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/HabitDescrEditorText" android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/HabitNameEditorText"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/habit_descr_default_value"
            android:ems="10"
            android:id="@+id/editTextHabitDescr" android:layout_weight="1"
            app:layout_constraintStart_toStartOf="@+id/guidelineEdit"
            app:layout_constraintTop_toBottomOf="@+id/editTextHabitName"
    />
    <TextView
            android:text="@string/habit_creation_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/habitEditHeader"
            android:textSize="20sp" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="108dp"
            android:layout_marginEnd="109dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/habit_type_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/HabitTypeButtonText"
            app:layout_constraintTop_toBottomOf="@+id/HabitPriorityEditorText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="@+id/guidelineEdit"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/habit_good_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/goodHabitButton" android:checked="true"/>
        <RadioButton
                android:text="@string/habit_bad_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/badHabitButton"/>
    </RadioGroup>
    <TextView
            android:text="@string/habit_period_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/HabitPeriodEditorText"
            app:layout_constraintTop_toBottomOf="@+id/HabitTypeButtonText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:text="@string/habit_period_default_value"
            android:id="@+id/editTextHabitPeriod"
            app:layout_constraintStart_toStartOf="@+id/guidelineEdit"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
    <TextView
            android:text="@string/habit_counter_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/HabitCounterEditorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HabitPeriodEditorText" android:layout_marginTop="19dp"
            android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:text="@string/habit_counter_default_value"
            android:id="@+id/editTextHabitCounter"
            app:layout_constraintTop_toBottomOf="@+id/editTextHabitPeriod"
            app:layout_constraintStart_toStartOf="@+id/guidelineEdit"/>
    <TextView
            android:text="@string/habit_priority_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/HabitPriorityEditorText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/HabitDescrEditorText" android:layout_marginTop="24dp"/>
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:max="9"
            android:progress="0"
            android:id="@+id/seekBar"
            app:layout_constraintTop_toBottomOf="@+id/editTextHabitDescr"
            app:layout_constraintStart_toStartOf="@+id/guidelineEdit" android:layout_marginTop="13dp"/>
    <Button
            android:text="@string/habit_create_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/HabitCreateButton"
            app:layout_constraintTop_toBottomOf="@+id/colorPickerScroll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/habit_color_picker_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/HabitColorPickerHeader"
            app:layout_constraintTop_toBottomOf="@+id/HabitCounterEditorText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/default_habit_color_rgb_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/HabitColorRGB"
            app:layout_constraintTop_toTopOf="@+id/HabitColorPickerHeader"
            app:layout_constraintStart_toEndOf="@+id/HabitColorPickerHeader" android:layout_marginStart="16dp"/>
    <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/pickedColor"
            app:layout_constraintTop_toTopOf="@+id/HabitColorRGB"
            app:layout_constraintBottom_toBottomOf="@+id/HabitColorRGB"
            android:background="@color/color1" app:layout_constraintStart_toStartOf="@+id/guidelineEdit"/>
    <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="@dimen/color_picker_height"
            app:layout_constraintTop_toBottomOf="@+id/pickedColor" android:id="@+id/colorPickerScroll"
            android:contentDescription="Выбор цвета" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scrollbarStyle="insideOverlay" android:fillViewport="true" android:clipToPadding="true"
            android:layout_marginTop="8dp">
        <LinearLayout android:layout_width="wrap_content" android:layout_height="@dimen/color_picker_height"
                      android:orientation="horizontal" android:id="@+id/colorPickerItemsLayout"
        >
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor1"
                    android:background="@color/color1"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor2"
                    android:background="@color/color2"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor3"
                    android:background="@color/color3"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor4"
                    android:background="@color/color4"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor5"
                    android:background="@color/color5"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor6"
                    android:background="@color/color6"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor7"
                    android:background="@color/color7"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor8"
                    android:background="@color/color8"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor9"
                    android:background="@color/color9"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor10"
                    android:background="@color/color10"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor11"
                    android:background="@color/color11"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor12"
                    android:background="@color/color12"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor13"
                    android:background="@color/color13"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor14"
                    android:background="@color/color14"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor15"
                    android:background="@color/color15"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
            <ImageView
                    android:layout_width="@dimen/color_picker_square_size"
                    android:layout_height="@dimen/color_picker_square_size"
                    android:id="@+id/colorPickerColor16"
                    android:background="@color/color16"
                    android:layout_marginStart="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginEnd="@dimen/color_picker_square_horisontal_margin"
                    android:layout_marginTop="@dimen/color_picker_layout_verticcal_margin"
                    android:layout_marginBottom="@dimen/color_picker_layout_verticcal_margin"/>
        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
